tests/machine/x/go/values_builtin.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/values_builtin.go:24:38: undefined: values

1: //go:build ignore
